# ssmdnsd

./: .gitignore  LICENSE  Makefile.am  README.md  bootstrap.sh  configure.ac  proj  ssmdnsd.1.in  ssmdnsd.service
.github/workflows/: build.yml  release.yml
src/: ssmdnsd.c
